# Cadence-Contracts

./: Cargo.toml  README.md
docs/: UPGRADE_GOVERNANCE.md
docs/superpowers/specs/: 2026-06-21-batch-operations-design.md  2026-06-21-upgrade-governance-design.md
src/: cache.rs  config.rs  lib.rs  main.rs  metrics.rs  rate_limit.rs  rate_limit_ledger.rs  stellar.rs  webhook.rs
