[package]
name = "proofstell_contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
soroban-sdk = "23.4.1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
soroban-sdk = { version = "23.4.1", features = ["testutils"] }
